--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,28 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding: 0 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .container-header {
@@ -164,39 +182,108 @@ body {
 }
 
 .hero {
-  height: 600px;
+  max-width: 1600px;
+  max-height: 600px;
 }
 
-.hero .container {
-  max-width: 1600px;
-  background-color: rgba(47, 48, 58, 0.8);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 600px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.hero__container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
+}
+
+@media screen and (min-width: 320px) {
+  .hero__container {
+    max-width: 480px;
+    min-height: 400px;
+    background-color: rgba(47, 48, 58, 0.8);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/Header.mobile.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Header.mobile.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__container {
+    max-width: 768px;
+    min-height: 400px;
+    background-color: rgba(47, 48, 58, 0.8);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/Header.tablet.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Header.tablet.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    background-color: rgba(47, 48, 58, 0.8);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header.jpg);
+    max-height: 600px;
+    min-width: 100%;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero__descritpion {
+    display: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__descritpion {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
 }
 
 .hero__title {
   color: var(--main-back-color);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  max-width: 700px;
-  margin-bottom: 30px;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .hero__title {
+    width: 360px;
+    height: 84px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    height: 120px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button-primary {
@@ -204,6 +291,7 @@ body {
   background: var(--accent-color);
   border: 2px solid var(--accent-color);
   font-weight: 700;
+  font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
   cursor: pointer;
@@ -454,18 +542,20 @@ body {
 }
 
 .feature__main {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .feature__main {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container .feature {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  list-style: none;
+  width: 100%;
+  padding: 0 15px;
 }
 
 .feature__title {
@@ -474,23 +564,21 @@ body {
 }
 
 .feature__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   margin: 0 auto;
   padding: 0;
 }
 
+.feature__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 .feature__description {
-  width: 270px;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  width: 100%;
   -ms-flex-preferred-size: calc(100% / 4 - var(--nav-list-gap));
       flex-basis: calc(100% / 4 - var(--nav-list-gap));
+  font-weight: 400;
+  line-height: 1.71;
+  color: var(--paragraf-text-color);
 }
 
 .feature__img {
@@ -508,22 +596,17 @@ body {
   background-color: #f5f4fa;
 }
 
-.feature__description {
-  font-weight: 400;
-  line-height: 1.71;
-  color: var(--paragraf-text-color);
-}
-
 .feature__title-tv,
 .feature__title-clock,
 .feature__title-comp,
 .feature__title-astro {
   margin-bottom: 10px;
+  margin-top: 30px;
   font-weight: 700;
   line-height: 1.14;
-  margin-top: 30px;
   font-size: 14px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .achievements {
@@ -699,15 +782,11 @@ body {
       flex-basis: calc(100% / 6 - var(--nav-list-gap));
 }
 
-.client__brand .client__logo:not(:last-child) {
-  margin-right: 30px;
-}
-
-.client__brand .client__icon {
+.client__icon {
   fill: currentColor;
 }
 
-.client__brand .client__link {
+.client__link {
   max-width: 170px;
   height: 90px;
   display: -webkit-box;
@@ -726,17 +805,19 @@ body {
   transition: color 250ms var(--timing-function);
 }
 
-.client__brand .client__link:hover, .client__brand .client__link:focus {
+.client__link:hover, .client__link:focus {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
 
-.client__brand .client__brand,
-.client__brand .client__logo {
+.client__logo {
   padding: 0;
-  margin: 0;
   -ms-flex-preferred-size: calc(100% / 6 - var(--nav-list-gap));
       flex-basis: calc(100% / 6 - var(--nav-list-gap));
+}
+
+.client__logo:not(:last-child) {
+  margin-right: 30px;
 }
 
 .footer {
