--- a/sass/common/_container.scss
+++ b/sass/common/_container.scss
@@ -7,8 +7,21 @@ body {
   }
   
   .container {
-    max-width: 1200px;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
     padding: 0 15px;
+
+    @media screen and(min-width:$mobile){
+      max-width: 480px;
+    }
+
+    @media screen and(min-width:$tablet){
+      max-width: 768px;
+    }
+
+    @media screen and(min-width:$desktop){
+      max-width: 1200px;
+    }
+
   }
