--- a/sass/studio/_hero.scss
+++ b/sass/studio/_hero.scss
@@ -1,35 +1,106 @@
 .hero {
-  height: 600px;
+  max-width: 1600px;
+  max-height: 600px;
 }
 
-.hero .container {
-  max-width: 1600px;
-  background-color: rgba(47, 48, 58, 0.8);
+.hero__container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  text-align: center;
+
+  @media screen and(min-width:320px){
+    max-width: 480px;
+    min-height: 400px;
+    background-color: rgba(47, 48, 58, 0.8);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(/images/Header.mobile.jpg);
+  
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+  }
+
+  @media screen and(min-width:$tablet){
+    max-width: 768px;
+    min-height: 400px;
+    background-color: rgba(47, 48, 58, 0.8);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(/images/Header.tablet.jpg);
+  
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+  }
+   
+  @media screen and(min-width:$desktop){
+     background-color: rgba(47, 48, 58, 0.8);
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/header.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 600px;
+    max-height: 600px;
+    min-width: 100%;
+    padding-top: 200px;
+  padding-bottom: 200px;
+  }
+}
+
+.hero__descritpion {
+
+
+  @media screen and(min-width:$mobile){
+    display: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  @media screen and(min-width:$desktop){
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
+  
+}
 
 .hero__title {
   color: var(--main-back-color);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  max-width: 700px;
-  margin-bottom: 30px;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and(min-width:$mobile){
+    width: 360px;
+    height: 84px;
+  font-size: 26px;
+  line-height: 1.62;
+  }
+
+  @media screen and(min-width:$desktop){
+    width: 696px;
+    height: 120px;
+  font-size: 44px;
+  line-height: 1.36;
+  }
+  
 }
 
 .hero__button-primary {
@@ -37,6 +108,7 @@
   background: var(--accent-color);
   border: 2px solid var(--accent-color);
   font-weight: 700;
+  font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
   cursor: pointer;
