--- a/sass/studio/_modal.scss
+++ b/sass/studio/_modal.scss
@@ -8,8 +8,7 @@
 }
 
 .modal {
-  max-width: 528px;
-  max-height: 581px;
+  
   position: absolute;
   top: 50%;
   left: 50%;
@@ -22,6 +21,22 @@
   border-radius: 4px;
   display: inline-block;
   justify-content: space-between;
+
+
+  // @media screen and(min-width:$mobile){
+  //   max-width: 450px;
+  // max-height: 609px;
+  // }
+
+  // @media screen and(min-width:$tablet){
+  //   max-width: 450px;
+  // max-height: 609px;
+  // }
+
+  // @media screen and(min-width:$desktop){
+  //   max-width: 528px;
+  // max-height: 581px;
+  // }
 }
 
 .modal__title-overlay {
