--- a/sass/common/_container.scss
+++ b/sass/common/_container.scss
@@ -7,7 +7,7 @@ body {
   }
   
   .container {
-    width: 100%;
+    // width: 100%;
     margin-right: auto;
     margin-left: auto;
     padding: 0 15px;
