--- a/sass/portfolio/_card.scss
+++ b/sass/portfolio/_card.scss
@@ -1,24 +1,67 @@
 .card__set {
+    // margin-bottom: 0;
+    margin: 0 auto;
+    padding: 0;
+
+  @media screen and(min-width:$tablet) {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  }
+
+  @media screen and(min-width:$desktop) {
+    width: 1170px;
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(-1 * 30px);
-    margin-top: calc(-1 * 30px);
-    padding: 0;
-    margin-bottom: 0;
+    margin-left: calc (-1 * 30px);
+    margin-top: calc (-1 * 30px);
   }
   
   .card__item {
+    
+    margin-right: 0;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+  }
+
+  @media screen and(min-width:480px){
+    width: 450px;
+    height: 294px;
+  }
+  @media screen and(min-width:760px) {
+    width: 354px;
     margin-left: 30px;
     margin-top: 30px;
-    flex-basis: calc(100% / 3 - 30px);
-    
+    &:not(:last-child) {
+    margin-bottom: unset;
+  }
+  }
+  @media screen and(min-width:1200px){
+    width: 370px;
+    margin-left: 30px;
+    margin-right: 30px;
+    flex-basis: calc(100%/3 - 30px);
+  }
   }
   
   .card__img {
     position: relative;
     overflow: hidden;
     background: #ffffff;
-    height: 294px;
+    width: 100%;
+    @media screen and(min-width:480px){
+      width: 450px;
+      height: 294px;
+    }
+    @media screen and(min-width:760px){
+      width: 254px;
+      height: 294px;
+    }
+    @media screen and(min-width:1200px){
+      width: 370px;
+      height: 294px;
+    }
   }
   
   .card__overlay {
@@ -71,7 +114,7 @@
     border-radius: 0px 0px 4px 4px;
     border-top: none;
     box-sizing: border-box;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
   
   .card__heading {
