--- a/sass/portfolio/_footer.scss
+++ b/sass/portfolio/_footer.scss
@@ -1,17 +1,45 @@
+// .footer {
+//   background: var(--footer-fon);
+//   padding-top: 60px;
+//   padding-bottom: 60px;
 
-.footer {
-    background: var(--footer-fon);
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+//   @media screen and(min-width:$mobile){
+//     max-width: 480px;
+//   }
+
+//   @media screen and(min-width:$tablet){
+//     max-width: 768px;
+//   }
+
+//   @media screen and(min-width:$desktop){
+//     max-width: 1600px;
+//   }
+// }
+
+// .container__container-footer {
+// min-width: 1200px;
+// padding:0 15px;
+// margin-left: auto;
+// margin-right: auto;
+
+//   @media screen and(min-width:$tablet){
+//  display: flex;
+//  align-items: baseline;
+//  flex-wrap: wrap;
+//  justify-content: space-around;
+// }
+
+// @media screen and(min-width:1200px) {
+// flex-wrap: nowrap;
+// display: flex;
+// justify-content: center;
+// }
+//   }
+
   
-  .container-footer {
-    display: flex;
-  }
-  
-  .footer__info {
-    margin-right: 70px;
-  }
+  // .footer__info {
+  //   // margin-right: 70px;
+  // }
   
   .footer__contact-link {
     line-height: 1.71;
