--- a/sass/portfolio/_portfolio.scss
+++ b/sass/portfolio/_portfolio.scss
@@ -1,25 +1,66 @@
 .container-portfolio {
-  padding-bottom: 94px;
-  padding-top: 94px;
-  width: 1200px;
-  margin-right: auto;
+// width:1200px;
   margin-left: auto;
+  margin-right: auto;
+  @media screen and(min-width:$mobile){
+    // padding-top: 76px;
+    // width: 100%;
+    padding-bottom: 60px;
+    padding-top: 60px;
+    min-width: 480px;
+  }
+  
+  @media screen and(min-width:$tablet){
+    padding-bottom: 60px;
+  padding-top: 60px;
+  }
+
+  @media screen and(min-width:$desktop){
+    // max-width:1200px;
+    padding-bottom: 94px;
+  padding-top: 94px; 
+  }
+
+}
+
+.container__section-portfolio {
+  // width: 1200px;
+margin-right: auto;
+margin-left: auto;
+padding: 0 15px;
 }
 
 .portfolio__button-list {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   text-decoration: none;
-  align-items: center;
   text-align: center;
   border-radius: 30px;
-  padding-bottom: 56px;
-}
+  // padding-bottom: 56px;
+  @media screen and(min-width:$mobile) {
+    max-width: 450px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  // @media screen and(min-width:$tablet) {
+  //   max-width: 100%;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   text-align: center;
+  // }
+  }
 
 /*button*/
 
 button {
   border: 0px;
+}
+.portfolio__button-item{
+  margin-left: 8px;
+  margin-bottom: 15px;
 }
 
 .portfolio__button-all {
@@ -32,11 +73,11 @@ button {
   cursor: pointer;
   width: 73px;
   height: 38px;
-  margin: 0;
   padding: 6px 22px;
   border-radius: 4px;
   border-color: var(--accent-color);
   transition: color 250ms var(--timing-function);
+
 }
 
 .portfolio__button-secondary {
