--- a/sass/studio/_client.scss
+++ b/sass/studio/_client.scss
@@ -1,30 +1,53 @@
 .client {
-  padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .client__title {
-  margin-bottom: 50px;
-  margin-top: 0;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
   width: 390px;
   height: 42px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and(min-width:$mobile){
+    font-size: 28px;
+    line-height: 1.178;
+    margin-bottom: 30px;
+  }
+
+  @media screen and(min-width:$tablet){
+    font-size: 28px;
+  line-height: 1.178;
+    margin-bottom: 30px;
+  }
+
+  @media screen and(min-width:$desktop){
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .client__brand {
   list-style: none;
-  height: 90px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  flex-basis: calc(100% / 6 - var(--nav-list-gap));
+ 
+  // margin-left: 30px;
+  // margin-top: 30px;
+  
+  @media screen and(min-width:$mobile) {
+    display: flex;
+   flex-wrap: wrap;
+   margin-left: -30px;
+   margin-top: -30px;
+  }
+
+    @media screen and(min-width:$desktop) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+      // flex-basis: calc(100% / 6 - var(--nav-list-gap));
+      }
 }
   
 
@@ -33,8 +56,8 @@
   }
 
   .client__link {
-    max-width: 170px;
-    height: 90px;
+    max-width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,10 +74,34 @@
   }
 
   .client__logo {
+    // width: 100%;
+    height: 90px;
     padding: 0;
-    flex-basis: calc(100% / 6 - var(--nav-list-gap));
+    // flex-basis: calc(100% / 6 - var(--nav-list-gap));
     
-    &:not(:last-child) {
-      margin-right: 30px;
+    // &:not(:last-child) {
+    //   margin-right: 30px;
+    // }
+
+    @media screen and(min-width:$mobile) {
+      width: 210px;
+      margin-left: 30px;
+      margin-top: 30px;
+      &:not(:last-child) {
+        margin-bottom: unset;
     }
+
+    @media screen and(min-width:$tablet) {
+      width: 226px;
+      margin-left: 30px;
+      margin-top: 30px;
+      &:not(:last-child) {
+        margin-bottom: unset;
+    }
+
+    }
+    @media screen and(min-width:$desktop){
+      width: 170px;
+    }
+  }
   }
