--- a/sass/studio/_feature.scss
+++ b/sass/studio/_feature.scss
@@ -1,4 +1,4 @@
-.feature__main {
+.section__feature-main {
   padding-top: 60px;
   padding-bottom: 60px;
 
@@ -22,18 +22,38 @@
 }
 
 .feature__list {
-  // display: flex;
-  // justify-content: space-between;
+  
   margin: 0 auto;
   padding: 0;
+
+  @media screen and(min-width:$tablet) {
+  display: flex;
+ flex-wrap: wrap;
+ margin-left: -30px;
+ margin-top: -30px;
+  }
 }
 
-
-  .feature__item:not(:last-child) {
+.feature__item {
+  width: 100%;
+  
+  &:not(:last-child) {
     margin-bottom: 30px;
 }
+@media screen and(min-width:$tablet) {
+  width: 354px;
+  margin-left: 30px;
+  margin-top: 30px;
+  &:not(:last-child) {
+    margin-bottom: unset;
+}
+}
+@media screen and(min-width:$desktop){
+  width: 270px;
+}
+}
 
-
+  
 .feature__description {
   width: 100%;
   // justify-content: left;
@@ -64,4 +84,8 @@
   font-size: 14px;
   text-transform: uppercase;
   text-align: center;
+
+  @media screen and(min-width:$tablet) {
+    text-align: left;
+  }
 }
