--- a/sass/studio/_form.scss
+++ b/sass/studio/_form.scss
@@ -1,5 +1,23 @@
-.form__row {
+.form{
+
+  @media screen and(min-width:$mobile){
+      max-width: 450px;
+    max-height: 609px;
+    }
+  
+    @media screen and(min-width:$tablet){
+      max-width: 450px;
+    max-height: 609px;
+    }
+  
+    @media screen and(min-width:$desktop){
+      max-width: 528px;
+    max-height: 581px;
+    }
+}
+.form__row:not(:last-child) {
   margin-bottom: 10px;
+  
 }
 
 .form__label {
@@ -22,10 +40,11 @@
   width: 100%;
   cursor: pointer;
   border-radius: 4px;
+  height: 40px;
 }
 
 .form__input-modal {
-  width: 448px;
+  width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 14px;
@@ -65,7 +84,7 @@
 }
 
 .form__input-comment {
-  width: 448px;
+  width:100%;
   height: 120px;
   margin: 0;
   padding: 12px 16px;
@@ -129,11 +148,20 @@
 
 .checkbox__text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--paragraf-text-color);
-  margin-left: 23px;
+  margin-left: 20px;
+
+  @media screen and(min-width:$mobile){
+    font-size: 10px;
+    line-height: 1.166;
+  }
+
+  @media screen and(min-width:$desktop){
+     font-size: 14px;
+  line-height: 1.71;
+  }
+  
 }
 
 .checkbox__button-primary {
@@ -147,8 +175,16 @@
   padding: 10px 55px;
   width: 200px;
   height: 50px;
-  margin-left: 120px;
+  border: none;
   text-transform: capitalize;
   padding: 0;
   margin-bottom: 0;
+
+  @media screen and(min-width:$mobile){
+    margin-left: 85px;
+  }
+
+  @media screen and(min-width:$desktop){
+    margin-left: 124px;
+  }
 }
