--- a/sass/portfolio/_header.scss
+++ b/sass/portfolio/_header.scss
@@ -1,7 +1,43 @@
 .container-header {
-    max-width: 1170px;
     margin-right: auto;
     margin-left: auto;
-    padding: 0 15px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
     border-bottom: 1px solid #ececec;
+    padding:24px 15px;
+
+    @media screen and (min-width:$mobile) {
+        max-width: 480px;
+    }
+    @media screen and (min-width:$tablet) {
+        max-width: 768px;
+        justify-content: space-between;
+    }
+    @media screen and(min-width:$desktop){
+        max-width: 1200px;
+      }
 }
+
+.menu-button {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    color: #000;
+    cursor: pointer;
+    border-radius: 50%;
+    outline:none;
+
+    @media screen and (min-width:$tablet) {
+        display: none;
+    }
+}
+
