--- a/sass/portfolio/_portfolio.scss
+++ b/sass/portfolio/_portfolio.scss
@@ -1,71 +1,98 @@
-.container-portfolio {
-// width:1200px;
+
+.container__section-portfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
   @media screen and(min-width:$mobile){
-    // padding-top: 76px;
-    // width: 100%;
-    padding-bottom: 60px;
-    padding-top: 60px;
-    min-width: 480px;
+    max-width: 480px;
   }
-  
+
   @media screen and(min-width:$tablet){
-    padding-bottom: 60px;
-  padding-top: 60px;
+    max-width: 768px;
   }
 
   @media screen and(min-width:$desktop){
-    // max-width:1200px;
+    max-width: 1200px;
+    padding-top: 94px;
     padding-bottom: 94px;
-  padding-top: 94px; 
   }
-
-}
-
-.container__section-portfolio {
-  // width: 1200px;
-margin-right: auto;
-margin-left: auto;
-padding: 0 15px;
 }
 
 .portfolio__button-list {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  text-decoration: none;
-  text-align: center;
-  border-radius: 30px;
-  // padding-bottom: 56px;
-  @media screen and(min-width:$mobile) {
-    max-width: 450px;
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  @media screen and(min-width:$tablet){
+   margin-bottom: 34px;
+   justify-content: center;
   }
+}
 
-  // @media screen and(min-width:$tablet) {
-  //   max-width: 100%;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   text-align: center;
-  // }
-  }
+.portfolio__button-item:not(:last-child){
+margin-right: 8px;
+@media screen and(min-width:$tablet){
+  // margin-bottom: 15px;
+ }
+}
+
+
+// .container-portfolio {
+
+//   margin-left: auto;
+//   margin-right: auto;
+//   @media screen and(min-width:$mobile){
+    
+//     padding-bottom: 60px;
+//     padding-top: 60px;
+//     min-width: 480px;
+//   }
+  
+//   @media screen and(min-width:$tablet){
+//     padding-bottom: 60px;
+//   padding-top: 60px;
+//   }
+
+//   @media screen and(min-width:$desktop){
+    
+//     padding-bottom: 94px;
+//   padding-top: 94px; 
+//   }
+
+// }
+
+// .container__section-portfolio {
+ 
+// margin-right: auto;
+// margin-left: auto;
+// padding: 0 15px;
+// }
+
+// .portfolio__button-list {
+  
+//   text-decoration: none;
+//   text-align: center;
+//   border-radius: 30px;
+  
+//   @media screen and(min-width:$mobile) {
+//     max-width: 450px;
+//     display: flex;
+//     flex-wrap: wrap;
+//   }
+//   }
 
 /*button*/
 
 button {
   border: 0px;
 }
-.portfolio__button-item{
-  margin-left: 8px;
-  margin-bottom: 15px;
-}
 
 .portfolio__button-all {
   font-family: Roboto;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.625;
   text-align: center;
@@ -77,7 +104,8 @@ button {
   border-radius: 4px;
   border-color: var(--accent-color);
   transition: color 250ms var(--timing-function);
-
+color: #212121;
+background-color: #f5f4fa;
 }
 
 .portfolio__button-secondary {
@@ -87,7 +115,6 @@ button {
   line-height: 1.9;
   text-decoration: none;
   cursor: pointer;
-  margin-left: 8px;
   width: 128px;
   height: 38px;
   transition: color 250ms var(--timing-function);
