--- a/sass/studio/_footer.scss
+++ b/sass/studio/_footer.scss
@@ -1,38 +1,40 @@
 .footer {
   background: var(--footer-fon);
-  padding-top: 60px;
-  padding-bottom: 60px;
-
-  @media screen and(min-width:$mobile){
-    max-width: 480px;
-  }
-
-  @media screen and(min-width:$tablet){
-    max-width: 768px;
-  }
-
-  @media screen and(min-width:$desktop){
-    max-width: 1600px;
-  }
 }
 
 .container__container-footer {
+width: 100%;
 margin-right: auto;
 margin-left: auto;
 padding: 0 15px;
+background: var(--footer-fon);
+padding-top: 60px;
+padding-bottom: 60px;
+display: flex;
+flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-  @media screen and(min-width:$tablet){
- display: flex;
- align-items: baseline;
- flex-wrap: wrap;
- justify-content: space-around;
+@media screen and(min-width:$mobile){
+  max-width: 480px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media screen and(min-width:$desktop) {
-// flex-wrap: nowrap;
-// display: flex;
-// justify-content: space-between;
+@media screen and(min-width:$tablet){
+  max-width: 768px;
+  align-items: flex-start;
+ flex-wrap: wrap;
+ justify-content: space-around;
+ flex-direction: unset;
+ 
+}
 
+@media screen and(min-width:$desktop){
+  max-width: 1200px;
+  flex-wrap: nowrap;
+justify-content: space-between;
 }
   }
 
@@ -40,26 +42,38 @@ padding: 0 15px;
 
 .footer__info {
   margin-bottom: 60px;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
 
+  @media screen and(min-width:$mobile){
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  }
+  
   @media screen and(min-width:$desktop){
-    align-items: left;
-    margin-right: 70px;
+
+    align-items: start;
+    // margin-right: 70px;
   }
 }
 
 .footer__studio {
   color: var(--main-back-color);
-
 }
 
 .footer__contact {
   margin-top: 9px;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
+  @media screen and(min-width:$mobile){
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  @media screen and(min-width:$desktop){
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    }
+
 }
 
 .footer__item {
@@ -74,6 +88,7 @@ padding: 0 15px;
   line-height: 1.71;
   color: var(--main-back-color);
   margin-top: 20px;
+
 }
 
 .footer__contact-link {
@@ -85,6 +100,12 @@ padding: 0 15px;
     color: var(--accent-color);
     text-decoration: none;
   }
+
+  @media screen and(min-width:$mobile){
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
 }
 
 .footer__social-icon {
@@ -95,11 +116,14 @@ padding: 0 15px;
 }
 
 .footer__enjoyus {
+  display: block;
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-back-color);
-  font-size: 14px;
+  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -146,16 +170,22 @@ padding: 0 15px;
 }
 
  .footer__contactus {
+   display: inline-block;
+
   @media screen and(min-width:480px){
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-  @media screen and(min-width:1200px){
+@media screen and(min-width:1200px){
   margin-left: 93px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
    }
-  }
+ }
+  
+ 
 
 
 .footer__form {
@@ -173,24 +203,27 @@ padding: 0 15px;
   }
 
   @media screen and(min-width:1200px){
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    height: 86px;
-    // width: 570px;
+    flex-direction: row;
   }
 }
 
+.footer__form-mail{
+  margin-bottom: 20px;
+
+  @media screen and(min-width:768px){
+    align-items: center;
+    }
+}
 
 .footer__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
+  background-color: var(--fon-back-hero);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  padding: 15px 16px;
-  background-color: var(--fon-back-hero);
+  padding: 15px 0px 15px 16px;
 
   @media screen and(min-width:480px){
     width: 450px;
@@ -198,30 +231,43 @@ padding: 0 15px;
 
   @media screen and(min-width:1200px){
 width: 358px;
+margin-right: 12px;
   }
 }
 
 .footer__button {
+  width: 200px;
+  height: 50px;
   color: var(--main-back-color);
   background: var(--accent-color);
   border: 2px solid var(--accent-color);
-  line-height: 1.9;
-  text-transform: capitalize;
-  cursor: pointer;
   border-radius: 4px;
-  padding: 10px 29px;
-  margin: 0;
-  width: 100%;
+  font-weight: 700;
+  font-style: 16px;
+letter-spacing: 0.06em;
+line-height: 1.875;
+text-transform: capitalize;
+  cursor: pointer;
+  text-align: center;
+  margin-bottom: 20px;
+
 }
 
 .footer__button-contact {
-  width: 200px;
   position: relative;
-  margin-top: 20px;
+
+  @media screen and(min-width:$mobile){
+    margin-top: 20px;
+  }
+
+  @media screen and(min-width:$tablet){
+    margin-top: 20px;
+  }
+  
 
   @media screen and(min-width:1200px){
     margin-left: 12px;
-    margin-top: 0;
+    // margin-top: 20px;
   }
 }
 
@@ -235,4 +281,5 @@ width: 358px;
   position: absolute;
   top: 13px;
   right: 28px;
+  margin-left: 10px;
 }
