--- a/sass/portfolio/_mobile.scss
+++ b/sass/portfolio/_mobile.scss
@@ -32,6 +32,8 @@
     cursor: pointer;
     border-radius: 50%;
     outline: none;
+    right: 15px;
+    position: absolute;
     // display: inline-flex;
 }
 
