--- a/css/main.css
+++ b/css/main.css
@@ -1928,6 +1928,8 @@ button {
   cursor: pointer;
   border-radius: 50%;
   outline: none;
+  right: 15px;
+  position: absolute;
 }
 
 .mobile-item {
