--- a/sass/portfolio/_card.scss
+++ b/sass/portfolio/_card.scss
@@ -1,10 +1,10 @@
 .card__set {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  @media screen and(min-width:$tablet){
-    margin-left: calc(-1*30px);
-    margin-top: calc(-1*30px);
+
+  @media screen and(min-width:$tablet) {
+    margin-left: calc(-1 * 30px);
+    margin-top: calc(-1 * 30px);
     justify-content: unset;
   }
 }
@@ -12,14 +12,19 @@
 .card__item {
   display: flex;
   flex-direction: column;
-  @media screen and(max-width:768px){
+
+  @media screen and(max-width:768px) {
     width: 100%;
     margin-bottom: 30px;
   }
-  @media screen and(min-width:767px){
-    flex-basis: calc(100%/2 -30px);
-    margin-left: 30px;
+  @media screen and(min-width:767px) {
+    flex-basis: calc(100% / 2 -30px);
+    margin-left: 15px;
     margin-top: 30px;
+  }
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
@@ -29,7 +34,7 @@
 }
 
 .card__set img {
-width: 100%;
+  width: 100%;
 }
 
 .card__overlay {
@@ -42,140 +47,52 @@ width: 100%;
   transition: transform 250ms var(--timing-function);
   padding: 63px 24px;
   background: rgba(33, 150, 243, 0.9);
-  @media screen and(min-width:$desktop){
+  @media screen and(min-width:$desktop) {
     padding-top: 24px;
   }
-  
-
 }
 
-// .card__set {
-    
-//     margin: 0 auto;
-//     padding: 0;
+.card__item:hover .card__overlay {
+  transform: translateY(0);
+}
 
-//   @media screen and(min-width:$tablet) {
-//   display: flex;
-//   flex-wrap: wrap;
-//   margin-left: -30px;
-//   margin-top: -30px;
-//   }
+.card__overlay-text {
+  font-weight: 400;
+  font-style: 18px;
+  line-height: 1.56;
+  color: var(--main-back-color);
+  letter-spacing: 0.03em;
+}
 
-//   @media screen and(min-width:$desktop) {
-//     width: 1170px;
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-left: calc (-1 * 30px);
-//     margin-top: calc (-1 * 30px);
-//   }
-// }
-//   .card__item {
-    
-//     margin-right: 0;
-//     &:not(:last-child) {
-//       margin-bottom: 30px;
-//   }
+.card__heading {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  color: var(--primary-text-color);
+}
 
-//   @media screen and(min-width:480px){
-//     width: 450px;
-//     height: 294px;
-//   }
-//   @media screen and(min-width:760px) {
-//     width: 354px;
-//     margin-left: 30px;
-//     margin-top: 30px;
-//     &:not(:last-child) {
-//     margin-bottom: unset;
-//   }
-//   }
-//   @media screen and(min-width:1200px){
-//     width: 370px;
-//     margin-left: 30px;
-//     margin-right: 30px;
-//     flex-basis: calc(100%/3 - 30px);
-//   }
-//   }
-  
-//   .card__img {
-//     position: relative;
-//     overflow: hidden;
-//     background: #ffffff;
-//     width: 100%;
-//     @media screen and(min-width:480px){
-//       width: 450px;
-//       height: 294px;
-//     }
-//     @media screen and(min-width:760px){
-//       width: 254px;
-//       height: 294px;
-//     }
-//     @media screen and(min-width:1200px){
-//       width: 370px;
-//       height: 294px;
-//     }
-//   }
-  
-  // .card__overlay {
-  //   display: inline-block;
-  //   position: absolute;
-  //   content: '';
-  //   width: 100%;
-  //   height: 100%;
-  //   background: rgba(33, 150, 243, 0.9);
-  //   font-size: 18px;
-  //   bottom: 0;
-  //   right: 0;
-  //   margin: 0;
-  //   transform: translateY(100%);
-  //   transition: transform 250ms var(--timing-function);
-  // }
-  
-  .card__item:hover .card__overlay {
-    transform: translateY(0);
-  }
-  
-  .card__item:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+.card__content {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+  border-radius: 0px 0px 4px 4px;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
-  
-  .card__overlay-text {
-    font-weight: 400;
-    font-style: 18px;
-    line-height: 1.56;
-    color: var(--main-back-color);
-    letter-spacing: 0.03em;
-  }
-  
-  .card__heading {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    color: var(--primary-text-color);
-  }
-  
-  .card__content {
-    padding: 20px 24px;
-    border: 1px solid #eeeeee;
-    border-top: none;
-    border-radius: 0px 0px 4px 4px;
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-  
-  .card__heading {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    color: #212121;
-    letter-spacing: 0.06;
-  }
-  
-  .card__specific {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    color: #757575;
-    margin-top: 4px;
-  }
+.card__heading {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  color: #212121;
+  letter-spacing: 0.06;
+}
+
+.card__specific {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  color: #757575;
+  margin-top: 4px;
+}
