--- a/sass/portfolio/_mobile.scss
+++ b/sass/portfolio/_mobile.scss
@@ -1,111 +1,105 @@
 .menu-container.is-open {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .menu-container {
-    position: fixed;
-    top:0;
-    left:0;
-    background-color: #fff;
-    width: 100vw;
-    height: 100vh;
-    padding: 48px 40px;
-    transform: translateX(100%);
-    transition: transform 250ms ease-in-out;
-}
-
-.menu-container .menu-button {
-    position: absolute;
-    top: 15px;
-    right: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+  box-sizing: border-box;
 }
 
 .menu-toggle {
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    color: #000;
-    cursor: pointer;
-    border-radius: 50%;
-    outline: none;
-    right: 15px;
-    position: absolute;
-    // display: inline-flex;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  cursor: pointer;
+  border-radius: 50%;
+  outline: none;
+  right: 15px;
+  position: absolute;
 }
-
-// .menu-button .icon-cross{
-//    display: none;
-
-// .menu-button .icon-menu {
-//     display: block;
-// }
-
-// .mobile-list {
-//     list-style: none;
-// }
 
 .mobile-item {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 .mobile-link {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02;
-    color: #000;
-    text-transform: capitalize;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02;
+  color: #212121;
+  text-transform: capitalize;
+  transition: color 250ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: #2196f3;
+  }
 }
+
 .mobile-list__contacts {
-position: absolute;
-left: 40px;
-bottom: 134px;
-list-style: none;
+  position: absolute;
+  left: 40px;
+  bottom: 134px;
+  list-style: none;
 }
 
 .mobile-item__contacts {
-    margin-bottom: 32px;
-}
-.mobile-item__number{
-    font-weight: 500;
-    font-style: 34px;
-    line-height: 1.333;
-    letter-spacing: 0.02em;
-    color:#2196f3;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.167;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
-.mobile-item__contacts {
-margin-bottom: 32px;
+.mobile-item__number {
+  font-weight: 500;
+  font-style: 34px;
+  line-height: 1.333;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 .mobile-item__mail {
-    font-weight: 500;
-    font-style: 24px;
-    line-height: 1.166;
-    letter-spacing: 0.02em;
-    color:#757575;
+  font-weight: 500;
+  font-style: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .mobile-network__list {
-    position: absolute;
-    left: 40px;
-    bottom: 40px;
-    display: flex;
-    flex-wrap: wrap;
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
 }
-.mobile-network__list .mobile-network__link {
-    font-weight: 500;
-    font-style: 18px;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-    color:#2196f3;
+
+.mobile-network__link {
+  font-weight: 500;
+  font-style: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
-.mobile-network__item:nth-child(-n+3):after {
-content: "";
-border:1px solid rgba(33,33,33,.2);
-transform:rotate(90deg) ;
-margin: 0 10px;
+
+.mobile-network__item:nth-child(-n + 3):after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  margin: 0 10px;
 }
