--- a/sass/studio/_footer.scss
+++ b/sass/studio/_footer.scss
@@ -3,57 +3,52 @@
 }
 
 .container__container-footer {
-width: 100%;
-margin-right: auto;
-margin-left: auto;
-padding: 0 15px;
-background: var(--footer-fon);
-padding-top: 60px;
-padding-bottom: 60px;
-display: flex;
-flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-@media screen and(min-width:$mobile){
-  max-width: 480px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 15px;
+  background: var(--footer-fon);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
 
-@media screen and(min-width:$tablet){
-  max-width: 768px;
-  align-items: flex-start;
- flex-wrap: wrap;
- justify-content: space-around;
- flex-direction: unset;
- 
-}
-
-@media screen and(min-width:$desktop){
-  max-width: 1200px;
-  flex-wrap: nowrap;
-justify-content: space-between;
-}
+  @media screen and(min-width:$mobile) {
+    max-width: 480px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
-  
+  @media screen and(min-width:$tablet) {
+    max-width: 768px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-direction: unset;
+  }
+
+  @media screen and(min-width:$desktop) {
+    max-width: 1200px;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
 
 .footer__info {
   margin-bottom: 60px;
 
-  @media screen and(min-width:$mobile){
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @media screen and(min-width:$mobile) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  
-  @media screen and(min-width:$desktop){
 
+  @media screen and(min-width:$desktop) {
     align-items: start;
-    // margin-right: 70px;
   }
 }
 
@@ -63,24 +58,23 @@ justify-content: space-between;
 
 .footer__contact {
   margin-top: 9px;
-  @media screen and(min-width:$mobile){
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  @media screen and(min-width:$mobile) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  @media screen and(min-width:$desktop){
+
+  @media screen and(min-width:$desktop) {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    }
-
+  }
 }
 
 .footer__item {
   margin-top: 9px;
-  
 }
-
 
 .footer__address {
   font-style: normal;
@@ -88,7 +82,6 @@ justify-content: space-between;
   line-height: 1.71;
   color: var(--main-back-color);
   margin-top: 20px;
-
 }
 
 .footer__contact-link {
@@ -101,15 +94,15 @@ justify-content: space-between;
     text-decoration: none;
   }
 
-  @media screen and(min-width:$mobile){
+  @media screen and(min-width:$mobile) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    }
+  }
 }
 
 .footer__social-icon {
- margin-bottom: 60px;
+  margin-bottom: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,50 +162,46 @@ justify-content: space-between;
   }
 }
 
- .footer__contactus {
-   display: inline-block;
+.footer__contactus {
+  display: inline-block;
 
-  @media screen and(min-width:480px){
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media screen and(min-width:1200px){
-  margin-left: 93px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-   }
- }
-  
- 
-
-
-.footer__form {
-
-  @media screen and(min-width:480px){
+  @media screen and(min-width:480px) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    }
+  }
+  @media screen and(min-width:1200px) {
+    margin-left: 93px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
 
-  @media screen and(min-width:768px){
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.footer__form {
+  @media screen and(min-width:480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  @media screen and(min-width:1200px){
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and(min-width:1200px) {
     flex-direction: row;
   }
 }
 
-.footer__form-mail{
+.footer__form-mail {
   margin-bottom: 20px;
 
-  @media screen and(min-width:768px){
+  @media screen and(min-width:768px) {
     align-items: center;
-    }
+  }
 }
 
 .footer__input {
@@ -225,13 +214,13 @@ justify-content: space-between;
   border-radius: 4px;
   padding: 15px 0px 15px 16px;
 
-  @media screen and(min-width:480px){
+  @media screen and(min-width:480px) {
     width: 450px;
-      }
+  }
 
-  @media screen and(min-width:1200px){
-width: 358px;
-margin-right: 12px;
+  @media screen and(min-width:1200px) {
+    width: 358px;
+    margin-right: 12px;
   }
 }
 
@@ -244,30 +233,28 @@ margin-right: 12px;
   border-radius: 4px;
   font-weight: 700;
   font-style: 16px;
-letter-spacing: 0.06em;
-line-height: 1.875;
-text-transform: capitalize;
+  letter-spacing: 0.06em;
+  line-height: 1.875;
+  text-transform: capitalize;
   cursor: pointer;
   text-align: center;
   margin-bottom: 20px;
-
 }
 
 .footer__button-contact {
   position: relative;
 
-  @media screen and(min-width:$mobile){
+  @media screen and(min-width:$mobile) {
     margin-top: 20px;
   }
 
-  @media screen and(min-width:$tablet){
+  @media screen and(min-width:$tablet) {
     margin-top: 20px;
   }
-  
 
-  @media screen and(min-width:1200px){
+  @media screen and(min-width:1200px) {
     margin-left: 12px;
-    // margin-top: 20px;
+    margin-top: 0;
   }
 }
 
