--- a/sass/portfolio/_header.scss
+++ b/sass/portfolio/_header.scss
@@ -5,10 +5,10 @@
   position: relative;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
-  padding: 24px 15px;
+  // border-bottom: 1px solid #ececec;
+  padding: 0px 15px;
 
-  @media screen and (min-width: $mobile) {
+  @media screen and (min-width: 320px) {
     max-width: 480px;
   }
   @media screen and (min-width: $tablet) {
@@ -38,5 +38,28 @@
 
   @media screen and (min-width: $tablet) {
     display: none;
+  }
+}
+
+.container-header__portfolio{
+  font-weight: 500;
+  line-height: 1.14;
+  color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
   }
 }
