--- a/sass/studio/_client.scss
+++ b/sass/studio/_client.scss
@@ -1,24 +1,23 @@
 .client {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .client__title {
   font-weight: 700;
-  width: 390px;
-  height: 42px;
-  margin-left: auto;
-  margin-right: auto;
 
   @media screen and(min-width:$mobile) {
     font-size: 28px;
     line-height: 1.178;
     margin-bottom: 30px;
+ 
   }
 
   @media screen and(min-width:$tablet) {
     font-size: 28px;
     line-height: 1.178;
     margin-bottom: 30px;
+    text-align: center;
   }
 
   @media screen and(min-width:$desktop) {
