--- a/sass/studio/_header.scss
+++ b/sass/studio/_header.scss
@@ -1,4 +1,5 @@
 .container-header {
+  margin-bottom: 16px;
   @media screen and(min-width:$mobile) {
     display: flex;
     justify-content: space-between;
@@ -10,11 +11,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0;
   }
   @media screen and(min-width:$desktop) {
     display: flex;
     justify-content: center;
     align-items: center;
+margin-bottom: 0;
   }
 }
 
