--- a/sass/studio/_team.scss
+++ b/sass/studio/_team.scss
@@ -1,11 +1,12 @@
 .team {
+  padding-top: 94px;
   padding-bottom: 94px;
   background-color: #f5f4fa;
 }
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.166;
   text-align: center;
   margin: 0;
@@ -13,12 +14,17 @@
   margin-bottom: 50px;
 
   @media screen and(min-width:320px) {
-    font-size: 24px;
     line-height: 1.375;
     margin-bottom: 30px;
   }
+  
 
   @media screen and(min-width:$tablet) {
+    font-size: 28px;
+    line-height: 1.166;
+    margin-bottom: 50px;
+  }
+  @media screen and(min-width:$desktop) {
     font-size: 36px;
     line-height: 1.166;
     margin-bottom: 50px;
