--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
   border-bottom: 1px solid #ececec;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .container {
     max-width: 480px;
   }
@@ -74,7 +74,7 @@ body {
   margin-bottom: 16px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .container-header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -218,7 +218,7 @@ body {
   color: var(--accent-color);
 }
 
-.container-header__current {
+.container-header__studio {
   font-weight: 500;
   line-height: 1.14;
   color: var(--primary-text-color);
@@ -226,11 +226,11 @@ body {
   transition: color 250ms var(--timing-function);
 }
 
-.container-header__current:hover, .container-header__current:focus {
+.container-header__studio:hover, .container-header__studio:focus {
   color: var(--accent-color);
 }
 
-.container-header__current::after {
+.container-header__studio::after {
   content: "";
   position: absolute;
   left: 0;
@@ -360,7 +360,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .hero__descritpion {
     display: column;
     -webkit-box-align: center;
@@ -396,7 +396,7 @@ body {
   margin-left: auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .hero__title {
     width: 360px;
     height: 84px;
@@ -496,7 +496,7 @@ body {
   color: var(--accent-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .form {
     max-width: 450px;
     max-height: 609px;
@@ -671,7 +671,7 @@ body {
   margin-left: 20px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .checkbox__text {
     font-size: 10px;
     line-height: 1.166;
@@ -702,7 +702,7 @@ body {
   margin-bottom: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .checkbox__button-primary {
     margin-left: 85px;
   }
@@ -1039,7 +1039,7 @@ body {
   font-weight: 700;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .client__title {
     font-size: 28px;
     line-height: 1.178;
@@ -1068,7 +1068,7 @@ body {
   list-style: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .client__brand {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1128,7 +1128,7 @@ body {
   padding: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .client__logo {
     width: 210px;
     margin-left: 30px;
@@ -1139,7 +1139,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 768px) {
+@media screen and (min-width: 450px) and (min-width: 768px) {
   .client__logo {
     width: 226px;
     margin-left: 30px;
@@ -1150,7 +1150,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 1200px) {
+@media screen and (min-width: 450px) and (min-width: 1200px) {
   .client__logo {
     width: 170px;
   }
@@ -1183,7 +1183,7 @@ body {
           align-items: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .container__container-footer {
     max-width: 480px;
     -webkit-box-orient: vertical;
@@ -1231,7 +1231,7 @@ body {
   margin-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__info {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1266,7 +1266,7 @@ body {
   margin-top: 9px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__contact {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1320,7 +1320,7 @@ body {
   text-decoration: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__contact-link {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1335,7 +1335,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 1200px) {
+@media screen and (min-width: 450px) and (min-width: 1200px) {
   .footer__contact-link {
     -webkit-box-align: start;
         -ms-flex-align: start;
@@ -1429,7 +1429,7 @@ body {
   display: inline-block;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__contactus {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1460,7 +1460,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__form {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1530,7 +1530,7 @@ body {
   padding: 15px 0px 15px 16px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__input {
     width: 450px;
   }
@@ -1570,7 +1570,7 @@ body {
   position: relative;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .footer__button-contact {
     margin-top: 20px;
   }
@@ -1614,6 +1614,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 0px 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media screen and (min-width: 320px) {
@@ -1689,6 +1691,18 @@ body {
   border-radius: 2px;
 }
 
+.container-header__current {
+  font-weight: 500;
+  line-height: 1.14;
+  color: var(--primary-text-color);
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+
+.container-header__current:hover, .container-header__current:focus {
+  color: var(--accent-color);
+}
+
 .container__section-portfolio {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1699,7 +1713,7 @@ body {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .container__section-portfolio {
     max-width: 480px;
   }
@@ -1741,11 +1755,12 @@ body {
 
 .portfolio__button-item {
   margin-right: 8px;
+  margin-top: 15px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .portfolio__button-item {
-    margin-top: 15px;
+    margin-top: 0px;
   }
 }
 
