--- a/sass/portfolio/_header.scss
+++ b/sass/portfolio/_header.scss
@@ -7,7 +7,7 @@
   align-items: center;
   // border-bottom: 1px solid #ececec;
   padding: 0px 15px;
-
+box-sizing: border-box;
   @media screen and (min-width: 320px) {
     max-width: 480px;
   }
@@ -63,3 +63,17 @@
     border-radius: 2px;
   }
 }
+
+.container-header__current {
+  font-weight: 500;
+  line-height: 1.14;
+  color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+
+}
+
