--- a/css/main.css
+++ b/css/main.css
@@ -322,8 +322,8 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header.mobile.jpg);
-  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header.mobile.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header.mobile.jpg);
+  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header.mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -331,8 +331,8 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-mob@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-mob@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-mob@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mob@2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -341,15 +341,15 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-tab.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-tab.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-tab@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-tab@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab@2x.jpg);
   }
 }
 
@@ -358,15 +358,15 @@ body {
     padding-top: 200px;
     padding-bottom: 200px;
     min-height: 600px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-desk.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-desk.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-desk@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-desk@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk@2x.jpg);
   }
 }
 
