--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@ body {
 @media screen and (min-width: 1200px) {
   .container-header__logo {
     margin-right: 93px;
+    margin-left: 0;
   }
 }
 
@@ -322,8 +323,8 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-mobile.jpg);
-  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mobile.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-mobile.jpg);
+  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -331,8 +332,8 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-mob@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mob@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-mob@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mob@2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -341,15 +342,15 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-tab@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-tab@2x.jpg);
   }
 }
 
@@ -358,15 +359,15 @@ body {
     padding-top: 200px;
     padding-bottom: 200px;
     min-height: 600px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero__container {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk@2x.jpg);
-    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0))), url(../images/Header-desk@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-desk@2x.jpg);
   }
 }
 
@@ -736,7 +737,7 @@ body {
   }
 }
 
-.container .feature {
+.container__feature {
   width: 100%;
   padding: 0 15px;
 }
@@ -1612,6 +1613,10 @@ body {
   margin-left: 10px;
 }
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
 .container-header {
   margin-right: auto;
   margin-left: auto;
@@ -1752,6 +1757,7 @@ body {
           justify-content: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
