--- a/sass/portfolio/_header.scss
+++ b/sass/portfolio/_header.scss
@@ -1,3 +1,7 @@
+.header {
+border-bottom: 1px solid #ececec;
+}
+
 .container-header {
   margin-right: auto;
   margin-left: auto;
@@ -5,9 +9,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  // border-bottom: 1px solid #ececec;
   padding: 0px 15px;
-box-sizing: border-box;
+  box-sizing: border-box;
   @media screen and (min-width: 320px) {
     max-width: 480px;
   }
