--- a/sass/portfolio/_card.scss
+++ b/sass/portfolio/_card.scss
@@ -41,7 +41,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  // width: 370px;
   height: 100%;
   transform: translateY(101%);
   transition: transform 250ms var(--timing-function);
