--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@ body {
   background: var(--main-back-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
-  font-size: 14px;
 }
 
 .container {
@@ -739,7 +738,28 @@ body {
 
 .container__feature {
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
   padding: 0 15px;
+  border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 450px) {
+  .container__feature {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container__feature {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container__feature {
+    max-width: 1200px;
+  }
 }
 
 .feature__title {
@@ -1609,8 +1629,7 @@ body {
   border-radius: 4px;
   position: absolute;
   top: 13px;
-  right: 28px;
-  margin-left: 10px;
+  right: 13px;
 }
 
 .header {
@@ -1899,7 +1918,6 @@ button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
   -webkit-transform: translateY(101%);
           transform: translateY(101%);
