--- a/sass/common/_container.scss
+++ b/sass/common/_container.scss
@@ -2,7 +2,7 @@ body {
   background: var(--main-back-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
-  font-size: 14px;
+  // font-size: 14px;
 }
 
 .container {
